--- a/Objects/project.build_log.htm
+++ b/Objects/project.build_log.htm
@@ -21,12 +21,11 @@ Target DLL:      Segger\JL2CM3.dll V2.99.40.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-E:\work\LoRa Module\RoomLight\RoomLight\project.uvprojx
+E:\work\LoRa Module\LoRaModule\LoRaModule\project.uvprojx
 Project File Date:  01/17/2024
 
 <h2>Output:</h2>
 Build target 'project'
-compiling lora_cmd_m.c...
 linking...
 creating hex file...
 ".\Objects\project.elf" - 0 Error(s), 0 Warning(s).
