--- a/Objects/project.build_log.htm
+++ b/Objects/project.build_log.htm
@@ -26,17 +26,49 @@ Project File Date:  01/17/2024
 
 <h2>Output:</h2>
 Build target 'project'
-compiling APP.c...
-compiling lora_cmd_m.c...
-compiling Lora_Demo.c...
-compiling lora_user.c...
+compiling tremo_delay.c...
+compiling tremo_bstimer.c...
+compiling system_cm4.c...
+compiling tremo_dac.c...
+compiling tremo_iwdg.c...
+compiling tremo_i2s.c...
+compiling tremo_crc.c...
+compiling tremo_flash.c...
+compiling tremo_lptimer.c...
+compiling tremo_adc.c...
+compiling tremo_i2c.c...
+compiling tremo_lpuart.c...
+compiling tremo_lcd.c...
+compiling tremo_gpio.c...
+compiling tremo_pwr.c...
+compiling printf-stdarg.c...
+compiling tremo_dma.c...
+compiling tremo_rcc.c...
+compiling tremo_system.c...
+compiling tremo_wdg.c...
+compiling tremo_it.c...
+compiling tremo_spi.c...
+compiling tremo_uart.c...
 compiling main.c...
-compiling lora_function.c...
+compiling Lora_Demo.c...
+compiling tremo_timer.c...
+compiling delay.c...
+compiling APP.c...
+compiling tremo_rtc.c...
+compiling rtc-board.c...
+compiling utilities.c...
+compiling timer.c...
+compiling sx1262-board.c...
+compiling lora_at_cmd.c...
+compiling sx126x.c...
+compiling radio.c...
+compiling lora_cmd_m.c...
 compiling lora_cmd_s.c...
 compiling lora_core.c...
+compiling lora_user.c...
+compiling lora_function.c...
 compiling ymodem.c...
 compiling lora_flash.c...
-compiling lora_at_cmd.c...
 linking...
 creating hex file...
 ".\Objects\project.elf" - 0 Error(s), 0 Warning(s).
@@ -52,7 +84,7 @@ Package Vendor: ARM
   E:\Software\Document\MDK\ARM\CMSIS\5.8.0\Device\ARM\ARMCM4\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
